// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: default 1`] = `
<Fragment>
  <Step
    finished={false}
    onOpen={[Function]}
    open={true}
    renderForm={[Function]}
    stepNumber={1}
    stepTitle="onboarding.tutorial.with.bitbucket_pipelines.create_secret.title"
  />
  <Step
    finished={false}
    onOpen={[Function]}
    open={false}
    renderForm={[Function]}
    stepNumber={2}
    stepTitle="onboarding.tutorial.with.bitbucket_pipelines.yaml.title"
  />
  <AllSetStep
    alm="github"
    open={false}
    stepNumber={3}
    willRefreshAutomatically={true}
  />
</Fragment>
`;

exports[`should render correctly: no binding 1`] = `
<Fragment>
  <Step
    finished={false}
    onOpen={[Function]}
    open={true}
    renderForm={[Function]}
    stepNumber={1}
    stepTitle="onboarding.tutorial.with.bitbucket_pipelines.create_secret.title"
  />
  <Step
    finished={false}
    onOpen={[Function]}
    open={false}
    renderForm={[Function]}
    stepNumber={2}
    stepTitle="onboarding.tutorial.with.bitbucket_pipelines.yaml.title"
  />
  <AllSetStep
    alm="bitbucketcloud"
    open={false}
    stepNumber={3}
    willRefreshAutomatically={true}
  />
</Fragment>
`;

exports[`should render correctly: repo variable step content 1`] = `
<RepositoryVariables
  almBinding={
    {
      "alm": "github",
      "key": "key",
    }
  }
  baseUrl="test"
  component={
    {
      "breadcrumbs": [],
      "key": "my-project",
      "name": "MyProject",
      "qualifier": "TRK",
      "qualityGate": {
        "isDefault": true,
        "key": "30",
        "name": "Sonar way",
      },
      "qualityProfiles": [
        {
          "deleted": false,
          "key": "my-qp",
          "language": "ts",
          "name": "Sonar way",
        },
      ],
      "tags": [],
    }
  }
  currentUser={
    {
      "dismissedNotices": {
        "educationPrinciples": false,
      },
      "groups": [],
      "isLoggedIn": true,
      "login": "luke",
      "name": "Skywalker",
      "scmAccounts": [],
    }
  }
  onDone={[Function]}
  projectBinding={
    {
      "alm": "bitbucketcloud",
      "key": "foo",
      "monorepo": true,
      "repository": "repo-slug",
    }
  }
/>
`;

exports[`should render correctly: yaml file step content 1`] = `
<withCLanguageFeature(YamlFileStep)>
  [Function]
</withCLanguageFeature(YamlFileStep)>
`;
